# mtgacoach

./: .env.example  .gitignore  AGENTS.md  DEV.md  GEMINI.md  INSTALL.md  OVERNIGHT_advice_filter.md  OVERNIGHT_autopilot_findings.md  README.md  RELEASE.md  TODO.md  coach.bat  fable-improvements.md  install.bat  launch.bat  launch.vbs  launcher.py  launcher_gui.py  play-real.sh  pyproject.toml  requirements.txt  self-improvement-plan.md  selfplay.sh  setup_wizard.py  turbo-charge-upgrades.md  windows_integration.py
.github/workflows/: ci.yml  installer.yml  publish-pypi.yml
bepinex-plugin/: README.md
bepinex-plugin/MtgaCoachBridge/: BotBattleBridge.cs  MtgaCoachBridge.csproj  Plugin.cs  PracticeMatchBridge.cs
docs/: DECISIONS.md
gateway/: README.md  config.yaml  docker-compose.yml
installer/: build-installer.ps1  mtgacoach.iss
installer/MtgaCoachLauncher/: App.xaml  App.xaml.cs  Imports.cs  MtgaCoachLauncher.csproj  MtgaCoachLauncher.slnx  Package.appxmanifest  app.manifest
installer/MtgaCoachLauncher/Models/: RuntimeState.cs
installer/MtgaCoachLauncher/Properties/: launchSettings.json
installer/MtgaCoachLauncher/Services/: AudioPlayback.cs  CoachProcess.cs  CrashLogger.cs  ProcessLauncher.cs  RuntimeDetector.cs
installer/MtgaCoachLauncher/Views/: CoachPage.xaml  CoachPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  RepairPage.xaml  RepairPage.xaml.cs
litellm/: config.yaml
proxy-server/: Dockerfile  app.py  config.yaml  db.py
proxy-server/templates/: admin.html
scripts/: launch_installed.py
src/arenamcp/: __init__.py  action_detector.py  action_planner.py  arena_replay.py  audio.py  autopilot.py  backend_detect.py  bugreport.py  cache_utils.py  card_db.py  client_metadata.py  coach.py  combat_solver.py  decision_arbiter.py  decisions.py  deck_builder.py  diagnose.py  draft_eval.py  draft_guidance.py  draftstate.py  draftstats.py  dynamic_cards.py  edhrec.py  game_plan.py  gamestate.py  gre_action_matcher.py  gre_bridge.py  gre_serializer.py  input_controller.py  log_utils.py  logging_config.py  match_evaluator.py  match_history.py  match_packets.py  match_review.py  match_validator.py  mtgadb.py  mtggoldfish.py  mtgjson.py  parser.py  (+32 more)
src/arenamcp/backends/: __init__.py  base.py  proxy.py
src/arenamcp/desktop/: advice_panel.py  app.py  audio.py  brain_stream_window.py  card_overlay.py  coach_process.py  coach_tab.py  compact_coach.py  hotkeys.py  hotkeys_darwin.py  hud.py  main_window.py  match_overlay.py  repair_tab.py  runtime.py  setup_splash.py  theme.py  tts_manager.py  window_tracking.py
src/arenamcp/model_benchmark/: __init__.py  metrics.py  report.py  runner.py  scenarios.py
src/arenamcp/model_benchmark/scenario_data/: scenarios.json
tests/: conftest.py  test_action_planner_legality.py  test_action_planner_turn_intent.py  test_action_planner_turn_plan.py  test_attack_tax.py  test_autopilot_bridge_lock.py  test_autopilot_livelock.py  test_autopilot_optional_cost_gate.py  test_autopilot_solver_attacks.py  test_autopilot_stale_vs_bridge.py  test_block_advice_specificity.py  test_brain_stream_window.py  test_bridge_blocker_enrichment.py  test_bridge_offline_recovery.py  test_bridge_prompt_enrichment.py  test_bugreport.py  test_card_overlay_badges.py  test_card_prewarming.py  test_coach_advice_matching.py  test_coach_postprocess_lands.py  test_decision_arbiter.py  test_decisions.py  test_deck_builder_tiered.py  test_desktop_hotkeys.py  test_desktop_runtime.py  test_desktop_runtime_darwin.py  test_draft_eval_preference_locking.py  test_draft_guidance.py  test_dynamic_cards.py  test_game_plan.py  test_gre_bridge_read_timeout.py  test_hotkeys_and_vision_darwin.py  test_integration.py  test_library_summary.py  test_manual_play_detect_p14.py  test_match_evaluator.py  test_match_packets.py  test_match_packets_p09.py  test_match_review.py  test_meaningful_advice_filter.py  (+29 more)
tests/fixtures/stalls/: momentum_breaker_unpayable.json  nurturing_presence_select_targets.json  ruthless_negotiation_player_target.json
tools/: benchmark_models.py  verify_vllm.py
tools/eval/: README.md  coach_prompt_ablation.py  replay_stalls.py  run.py
tools/eval/replay/: prompts.py  run.py
tools/training/: build_dataset.py  run_pipeline.py  train.py
website/: .env.example  SETUP.md  app.py  config.yaml  db.py  docker-compose.yml  patreon.py  providers.py  requirements.txt
website/templates/: admin.html  landing.html  subscribe.html
