[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arenamcp"
version = "2.7.2"
description = "AI-powered real-time coaching and autopilot for Magic: The Gathering Arena"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["mtga", "magic-the-gathering", "coaching", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "mcp>=1.0.0",
    "watchdog>=3.0.0",
    "requests>=2.28.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "keyboard>=0.13.5",
    # The product IS the desktop VOICE coach + online gateway — these are
    # not optional. A bare `uv tool install <wheel>` used to strand them in
    # extras, so the installed app couldn't launch the GUI, reach the
    # gateway, or speak (2026-07-06: "Kokoro worker exited (1)", grey
    # Coach/Bridge dots). onnxruntime comes transitively via kokoro-onnx.
    "PySide6>=6.7.0",
    "openai>=1.0.0",
    "kokoro-onnx",         # TTS (spoken advice)
    "soundfile>=0.12.0",   # audio I/O for TTS/STT
    "faster-whisper>=1.0.0",  # STT (push-to-talk voice input)
]

[project.urls]
Homepage = "https://github.com/josharmour/mtgacoach"
Releases = "https://github.com/josharmour/mtgacoach/releases"
Issues = "https://github.com/josharmour/mtgacoach/issues"

[project.optional-dependencies]
desktop = [
    "PySide6>=6.7.0",
    "kokoro-onnx",
]
voice = [
    "faster-whisper>=1.0.0",
    "kokoro-onnx",
    "soundfile>=0.12.0",
]
llm = [
    "google-genai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
]
autopilot = [
    "pyautogui>=0.9.54",
    "pydirectinput-rgx>=1.0.0",
    "Pillow>=10.0.0",
]
scraping = [
    "beautifulsoup4>=4.12.0",
    "pyedhrec>=0.0.2",
    "lxml>=5.0.0",
    "networkx>=3.0",
]
full = [
    "arenamcp[desktop,voice,llm,autopilot,scraping]",
    "websocket-client>=1.6.0",
    "scipy>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mtgacoach-repair = "arenamcp.repair_cli:main"

[project.gui-scripts]
mtgacoach-desktop = "arenamcp.desktop.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arenamcp"]
